# tc-optimizer

./: .gitignore  .gitmodules  AUTHORS  CHANGELOG  CITATION.bib  CITATION.cff  CMakeLists.txt  Dockerfile  Dockerfile.debian  Dockerfile.fedora  INSTALL  LICENSE  Makefile.am  README  README.md  autogen.sh  configure.ac
examples/npdp/: counting.scop.c  knuth.scop.c  mcc.scop.c  mea.scop.c  nw.scop.c  sw.scop.c  sw3d.scop.c  zuker.scop.c
examples/other/: correction.scop.c  correction2.scop.c  cyclic.scop.c  cyclic2.scop.c  free-scheduling.scop.c  h.scop.c  levenshtein.scop.c  lu.scop.c  matrix.scop.c  merge.scop.c  mod-correction.scop.c  qbp.scop.c  reduction.scop.c  rna.scop.c  space.scop.c  srna.scop.c  srna2.scop.c  sum.scop.c  td.scop.c  transitive-tile.scop.c
examples/pluto/: 3d7pt-param.scop.c  3d7pt-t-param.scop.c  3d7pt-t.scop.c  3d7pt.scop.c  adi.scop.c  apop-param.scop.c  apop-t-param.scop.c  apop-t.scop.c  apop.scop.c  covcol.scop.c  dct.scop.c  fdtd-1d-param.scop.c  fdtd-1d.scop.c  fdtd-2d.scop.c  heat-1d-param.scop.c  heat-1d-t-param.scop.c  heat-1d-t.scop.c  heat-1d.scop.c  heat-2d-param.scop.c  heat-2d-t-param.scop.c  heat-2d-t.scop.c  heat-2d.scop.c  heat-3d-param.scop.c  heat-3d-t-param.scop.c  heat-3d-t.scop.c  heat-3d.scop.c  jacobi-1d-imper-param.scop.c  jacobi-1d-imper.scop.c  jacobi-2d-imper.scop.c  life-param.scop.c  life-t-param.scop.c  life-t.scop.c  life.c  life.scop.c  matmul.scop.c  seidel.scop.c  ssymm.scop.c  strmm.scop.c  strsm.scop.c  tce.scop.c  (+1 more)
examples/pluto+/: heat-1dp-nt-t.scop.c  heat-1dp-nt.scop.c  heat-1dp-t.scop.c  heat-1dp.scop.c  heat-2dp-nt-t.scop.c  heat-2dp-nt.scop.c  heat-2dp-t.scop.c  heat-2dp.scop.c  heat-3dp-nt-t.scop.c  heat-3dp-nt.scop.c  heat-3dp-t.scop.c  heat-3dp.scop.c
examples/pluto-perfect/: fdtd-1d-param.scop.c  fdtd-1d.scop.c  jacobi-1d-imper-param.scop.c  jacobi-1d-imper.scop.c  jacobi-2d-imper.scop.c
examples/polybench/: 2mm.scop.c  3mm.scop.c  adi.scop.c  atax.scop.c  bicg.scop.c  cholesky.scop.c  correlation.scop.c  covariance.scop.c  deriche.scop.c  doitgen.scop.c  durbin.scop.c  fdtd-2d.scop.c  floyd-warshall.scop.c  gemm.scop.c  gemver.scop.c  gesummv.scop.c  gramschmidt.scop.c  heat-3d.scop.c  jacobi-1d.scop.c  jacobi-2d.scop.c  lu.scop.c  ludcmp.scop.c  mvt.scop.c  nussinov.scop.c  seidel-2d.scop.c  symm.scop.c  syr2k.scop.c  syrk.scop.c  trisolv.scop.c  trmm.scop.c
examples/polybench-perfect/: fdtd-2d-mod.scop.c  fdtd-2d.scop.c  heat-3d-moje.scop.c  heat-3d.scop.c  jacobi-1d-mod.scop.c  jacobi-1d.scop.c  jacobi-2d.scop.c  nussinov.scop.c
examples/statistics/: art.scop.c  art2.scop.c  art3.scop.c  art4.scop.c  art5.scop.c  art6.scop.c  art7.scop.c  art8.scop.c  art9.scop.c  gramschmidt_priv.scop.c
examples/stencils/: heat-1d-periodic.scop.c  heat-1d.scop.c  heat-2d-periodic.scop.c  heat-2d.scop.c  heat-3d-periodic.scop.c  heat-3d.scop.c  thiim.scop.c
results/diamond-tiling/pluto/: 3d7pt.pluto.c  apop.pluto.c  fdtd-1d.pluto.c  game-of-life.pluto.c  heat-1d.pluto.c  heat-2d.pluto.c  heat-3d.pluto.c  jacobi-1d-imper.pluto.c
results/diamond-tiling/pluto+/: heat-1dp.pluto.c  heat-2dp.pluto.c
results/diamond-tiling/tc-diamond/: 3d7pt.c  apop.c  fdtd-1d.c  game-of-life.c  heat-1d.c  heat-1dp.c  heat-2d.c  heat-2dp.c  heat-3d.c  jacobi-1d-imper.c
results/diamond-tiling/tc-semi-diamond/: 3d7pt.c  apop.c  fdtd-1d.c  game-of-life.c  heat-1d.c  heat-1dp.c  heat-2d.c  heat-2dp.c  heat-3d.c  jacobi-1d-imper.c
results/dynamic-free-scheduling/: 2mm.c  3mm.c  atax.c  correlation.c  covariance.c  gesummv.c  mvt.c  syr2k.c  trmm.c
results/free-schedule-tiling/: bicg.c  gemm.c  gemver.c  syrk.c
results/merge-tiling/parameterized/: cholesky.c  trisolv.c
results/merge-tiling/unparameterized/: gramschmidt.c  lu.c  symm.c
results/sfs-tiling/pluto/32/: 2mm.c  bicg.c  gemm.c  gesummv.c  mvt.c  syr2k.c  syrk.c  trmm.c
results/sfs-tiling/pluto/8/: 2mm.c  bicg.c  gemm.c  gesummv.c  mvt.c  syr2k.c  syrk.c  trmm.c
results/sfs-tiling/tc-multi/32/: 2mm.c  bicg.c  gemm.c  gesummv.c  mvt.c  syr2k.c  syrk.c  trmm.c
results/sfs-tiling/tc-multi/8/: 2mm.c  bicg.c  gemm.c  gesummv.c  mvt.c  syr2k.c  syrk.c  (+1 more)
results/softwarex/openblas/: gesummv.c
results/softwarex/pluto/: floyd-warshall.c  gesummv.c
results/softwarex/polly/: gesummv.ll
results/softwarex/tc/: floyd-warshall.c  gesummv.c  heat-1dp.c
scripts/: tc-completion.bash
src/: .gitignore  Makefile.am  ast.cpp  ast.h  codegen.cpp  codegen.h  config.h  correction_inv_tiling.cpp  correction_inv_tiling.h  correction_tiling.cpp  correction_tiling.h  debug.cpp  debug.h  diamond_tiling.cpp  diamond_tiling.h  dynamic_free_scheduling.cpp  dynamic_free_scheduling.h  floyd_warshall_transitive_closure.cpp  floyd_warshall_transitive_closure.h  for_decorator.cpp  for_decorator.h  free_schedule_tiling.cpp  free_schedule_tiling.h  free_scheduling.cpp  free_scheduling.h  input_output.cpp  input_output.h  inv_correction_tiling.cpp  inv_correction_tiling.h  isl_scheduling.cpp  isl_scheduling.h  iterative_transitive_closure.cpp  iterative_transitive_closure.h  lex_scheduling.cpp  lex_scheduling.h  main.cpp  merge_tiling.cpp  merge_tiling.h  mod_correction_tiling.cpp  mod_correction_tiling.h  (+52 more)
(+223 files in other folders)
